fluentverse is modified

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://scontent.fdac99-1.fna.fbcdn.net/v/t39.30808-6/358627953_110015822156099_8063728280292463992_n.jpg?_nc_cat=105&ccb=1-7&_nc_sid=5f2048&_nc_eui2=AeEg9fOtfTDjHQg-YWt-G2cXyk23ecRCWf_KTbd5xEJZ_0LfQVRDuwIbEvAF-FIHWpaQgHNhJHOd8knok1m9Ki0x&_nc_ohc=VLU6I1nxv3UAX8qkoDd&_nc_ht=scontent.fdac99-1.fna&oh=00_AfD48SIEkOVKGkM5tdmABYL9mEA_jiPuQaMeM3WHoNjkXQ&oe=6559DD5B" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>FluentVerse</title>
   </head>
   <body>
     <div id="root"></div>
